# postgres-ha

./: Cargo.toml  README.md
.github/workflows/: build-and-push.yml
.kiro/specs/timescaledb-postgis-extensions/: .config.kiro  design.md  requirements.md  tasks.md
common/src/: telemetry.rs
docker/db/: Dockerfile  init-extensions.sql
docker/db/init/: 00-init.sql  01-tuning.sql
etcd/: Cargo.toml  Dockerfile
etcd/src/: bootstrap.rs  cluster.rs  config.rs  main.rs
haproxy/: Dockerfile
haproxy/lua/: pgsql_check.lua
haproxy/scripts/: check-primary.sh  check-replica.sh
haproxy/src/: config.rs  main.rs  monitoring.rs  nodes.rs  template.rs
postgres-patroni/: Cargo.toml  Dockerfile  Dockerfile.13  Dockerfile.14  Dockerfile.15  Dockerfile.16  Dockerfile.17  get-postgres-version.sh  init-ssl.sh
postgres-patroni/src/: lib.rs  ssl.rs
postgres-patroni/src/bootstrap/: extensions.rs  mod.rs  sql.rs
postgres-patroni/src/health_server/: config.rs  mod.rs  postgres.rs  routes.rs
postgres-patroni/src/patroni/: config.rs  health_server.rs  mod.rs  yaml.rs
